--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -40,6 +40,10 @@ h2{
   }
 }
 
+.search-form{
+  font-family: $body-font-family;
+}
+
 .card{
   border-radius: 0;
 
